--- a/installer/debian/build
+++ b/installer/debian/build
@@ -9,32 +9,52 @@ release=${app}-${version}
 rm -fr packages
 mkdir -p packages
 
-# root="`pwd`/${release}"
+# dh_make -i -c gpl3 -n -e brice.texier@ekylibre.org -p ${app}_${version}
+
+debdir="`pwd`/debian"
+
+root="`pwd`/files"
+rm -fr $root
+mkdir -p $root
+
+ln -s $debdir $root/debian
+
+control=$debdir/control
+
+# echo "Source: ${app}" > $control 
+# echo "Version: ${version}" >> $control 
+# echo "Section: misc" >> $control 
+# echo "Priority: extra" >> $control 
+# echo "Maintainer: Brice Texier <brice.texier@ekylibre.org>" >> $control 
+# echo "Build-Depends: debhelper (>= 7.0.50~)" >> $control 
+# echo "Standards-Version: 3.8.4" >> $control 
+# echo "Homepage: http://www.ekylibre.org" >> $control 
+# #echo "Vcs-Git: git://git.debian.org/collab-maint/mypackage.git" >> $control 
+# #echo "Vcs-Browser: http://git.debian.org/?p=collab-maint/mypackage.git;a=summary" >> $control 
+# echo "" >> $control 
+# echo "Package: ${app}" >> $control 
+# echo "Architecture: all" >> $control 
+# echo "Depends: ruby (>=1.8.7), rubygems (>=1.3.7), ruby-dev (>=1.8.7), libxml2-dev, libpq-dev, apache2 (>=2.2.4), libapache2-mod-passenger, postgresql (>=8.3)" >> $control 
+# echo "Description: simple ERP for little businesses" >> $control 
+# echo " Ekylibre is a simple ERP for little businesses. Ekylibre can manage companies, users, rights, CRM, general accounting, sales, pruchases, stocks and production. It's aimed to be simple but all-in-one for little enterprises." >> $control 
+
+rm -fr copy
+cp -rL ${app} copy
+sed -i -e 's/gem "mysql/#gem "mysql/g' -i -e 's/gem "sqlite/#gem "sqlite/g' copy/Gemfile
+find copy -name .svn* -print0 | xargs -0 rm -rf
+find copy -name .git* -print0 | xargs -0 rm -rf
+find copy -name "*~"  -print0 | xargs -0 rm -rf
+find copy -name "#*#" -print0 | xargs -0 rm -rf
+rm copy/config/database.yml
 
 
-# debdir="${root}/DEBIAN"
-
-# rm -fr $root
-
-# mkdir -p $debdir
-
-# cd $root
-# dh_make -i --createorig
-
-# # control=$debdir/control
-# # echo "Package: ${app}" > $control
-# # echo "Version: ${version}" >> $control 
-# # echo "Architecture: all" >> $control 
-# # echo "Priority: optional" >> $control
-# # echo "Homepage: http://www.ekylibre.org" >> $control
-# # echo "Maintainer: Brice Texier <brice.texier@ekylibre.org>" >> $control 
-# # echo "Description: Simple ERP for little business" >> $control
-# # echo "Section: web" >> $control
-# # echo "Depends: ruby (>=1.8.7), rubygems (>=1.3.7), ruby-dev (>=1.8.7), apache2 (>=2.2.4), libapache2-mod-passenger" >> $control
-# # echo "Recommends: postgresql (>=8.3)" >> $control
-
-# mkdir -p "$root/usr/share"
-# cp -r ${app} "$root/usr/share/"
-
+cd $root
 # dpkg --build $root
-# dpkg-buildpackage -b
+dpkg-buildpackage -us -uc -b >> $log
+
+cd ..
+
+rm -fr copy
+rm -fr $root
+
+mv ${app}_${version}*.deb packages/
