--- a/config-3/rights.yml
+++ b/config-3/rights.yml
@@ -36,6 +36,7 @@ __minimum__:
 # Inaccessible
 __not_used__:
   actions:
+  - company::list_company
   - finances::tax_declaration
   - finances::tax_declaration_create
   - finances::tax_declaration_delete
