--- a/app/themes/tekyla/generators/build
+++ b/app/themes/tekyla/generators/build
@@ -28,10 +28,12 @@ meta = {
   :theme => "tekyla"
 }
 
+
 here = Pathname.new(File.expand_path(__FILE__)).dirname
 sources = here.join("source-fonts")
 output_file = here.join("..", "fonts", "#{meta[:filename]}.svg")
 font_awesome_dir = here.join("font-awesome")
+glyphs = here.join("glyphs")
 
 # Get latest Font-Awesome
 FileUtils.mkdir_p(font_awesome_dir.dirname)
@@ -43,68 +45,70 @@ else
   command("git clone git@github.com:FortAwesome/Font-Awesome.git #{font_awesome_dir}")
 end
 
-# Normalize Font-Awesome
-awesome_dir = sources.join("001-awesome")
-FileUtils.rm_rf(awesome_dir)
-FileUtils.mkdir_p(awesome_dir)
-# FileUtils.cp(font_awesome_dir.join("build", "icons.yml"), awesome_dir.join("config.yml"))
-File.open(awesome_dir.join("config.yml"), "wb") do |f|
-  icons = YAML.load_file(font_awesome_dir.join("build", "icons.yml"))
-  # raise icons.inspect
-  config = {"glyphs" => icons["icons"].collect{|h| {"css" => h["id"], "from" => "0x" + h["unicode"]} } }
-  f.write(config.to_yaml)
-end
+if ARGV[0] != "g"
 
-forgotten_names = {
-  "_279" => "info",
-  "_283" => "eraser",
-  "_303" => "rss_sign",
-  "_312" => "external_link_sign"
-}
-
-# FileUtils.cp(font_awesome_dir.join("build", "assets", "font-awesome", "font", "fontawesome-webfont.svg"), awesome_dir.join("font.svg"))
-source = font_awesome_dir.join("build", "assets", "font-awesome", "font", "FontAwesome.otf")
-command("fontforge -script font-convert.pe #{source.to_s} svg")
-interm = source.dirname.join("FontAwesome.svg")
-File.open(interm) do |i|
-  doc = Nokogiri::XML(i) do |config|
-    config.nonet.strict.noblanks
+  # Normalize Font-Awesome
+  awesome_dir = sources.join("001-awesome")
+  FileUtils.rm_rf(awesome_dir)
+  FileUtils.mkdir_p(awesome_dir)
+  # FileUtils.cp(font_awesome_dir.join("build", "icons.yml"), awesome_dir.join("config.yml"))
+  File.open(awesome_dir.join("config.yml"), "wb") do |f|
+    icons = YAML.load_file(font_awesome_dir.join("build", "icons.yml"))
+    # raise icons.inspect
+    config = {"glyphs" => icons["icons"].collect{|h| {"css" => h["id"], "from" => "0x" + h["unicode"]} } }
+    f.write(config.to_yaml)
   end
-  doc.root.xpath("//glyph[@d]").each do |glyph|
-    name = glyph.attr("glyph-name")
-    name = forgotten_names[name] || name
-    puts "   !Weird name: #{name}" unless name =~ /^[a-z0-9]+((\_|\-)[a-z0-9]+)*$/
-    name.gsub!(/[^a-z0-9]+/, '-')
-    glyph["glyph-name"] = name
-  end
-  doc.root.default_namespace = SVG_NAMESPACES[:svg]
-  for name, url in SVG_NAMESPACES
-    doc.root.add_namespace(name.to_s, url)
-  end
-  File.open(awesome_dir.join("font.svg"), "wb") do |f|
-    f.write doc.to_s
-  end
-end
 
-puts "-" * 80
+  forgotten_names = {
+    "_279" => "info",
+    "_283" => "eraser",
+    "_303" => "rss_sign",
+    "_312" => "external_link_sign"
+  }
 
-glyphs = here.join("glyphs")
-
-
-# Explodes all font characters in one dir
-FileUtils.rm_rf(glyphs)
-FileUtils.mkdir_p(glyphs)
-Dir.chdir(sources) do
-  for font_fullname in Dir["*"].sort
-    font_dir = sources.join(font_fullname)
-    font_name = font_fullname.split("-")[1..-1].join("-")
-    font_file = font_dir.join("font.svg")
-    config_file = font_dir.join("config.yml")
-    if font_file.exist? and config_file.exist?
-      command("svg-font-dump -n -c #{config_file} -f -i #{font_file} -o #{glyphs} ")
+  # FileUtils.cp(font_awesome_dir.join("build", "assets", "font-awesome", "font", "fontawesome-webfont.svg"), awesome_dir.join("font.svg"))
+  source = font_awesome_dir.join("build", "assets", "font-awesome", "font", "FontAwesome.otf")
+  command("fontforge -script font-convert.pe #{source.to_s} svg")
+  interm = source.dirname.join("FontAwesome.svg")
+  File.open(interm) do |i|
+    doc = Nokogiri::XML(i) do |config|
+      config.nonet.strict.noblanks
+    end
+    doc.root.xpath("//glyph[@d]").each do |glyph|
+      name = glyph.attr("glyph-name")
+      name = forgotten_names[name] || name
+      puts "   !Weird name: #{name}" unless name =~ /^[a-z0-9]+((\_|\-)[a-z0-9]+)*$/
+      name.gsub!(/[^a-z0-9]+/, '-')
+      glyph["glyph-name"] = name
+    end
+    doc.root.default_namespace = SVG_NAMESPACES[:svg]
+    for name, url in SVG_NAMESPACES
+      doc.root.add_namespace(name.to_s, url)
+    end
+    File.open(awesome_dir.join("font.svg"), "wb") do |f|
+      f.write doc.to_s
     end
   end
+
+  puts "-" * 80
+
+  # Explodes all font characters in one dir
+  FileUtils.rm_rf(glyphs)
+  FileUtils.mkdir_p(glyphs)
+  Dir.chdir(sources) do
+    for font_fullname in Dir["*"].sort
+      font_dir = sources.join(font_fullname)
+      font_name = font_fullname.split("-")[1..-1].join("-")
+      font_file = font_dir.join("font.svg")
+      config_file = font_dir.join("config.yml")
+      if font_file.exist? and config_file.exist?
+        command("svg-font-dump -n -c #{config_file} -f -i #{font_file} -o #{glyphs} ")
+      end
+    end
+  end
+
 end
+
 
 config_file = here.join('config.yml')
 config = {
