--- a/test/fixtures/procedure_variables.yml
+++ b/test/fixtures/procedure_variables.yml
@@ -20,16 +20,19 @@
 #
 # == Table: procedure_variables
 #
-#  created_at   :datetime         not null
-#  creator_id   :integer
-#  id           :integer          not null, primary key
-#  lock_version :integer          default(0), not null
-#  nomen        :string(255)      not null
-#  procedure_id :integer          not null
-#  roles        :string(255)
-#  target_id    :integer          not null
-#  updated_at   :datetime         not null
-#  updater_id   :integer
+#  created_at          :datetime         not null
+#  creator_id          :integer
+#  id                  :integer          not null, primary key
+#  lock_version        :integer          default(0), not null
+#  nomen               :string(255)      not null
+#  procedure_id        :integer          not null
+#  procedure_indicator :string(255)      not null
+#  procedure_quantity  :decimal(19, 4)   not null
+#  procedure_unit      :string(255)      not null
+#  roles               :string(255)
+#  target_id           :integer          not null
+#  updated_at          :datetime         not null
+#  updater_id          :integer
 #
 #
 # == Fixture: procedure_variables
@@ -40,6 +43,9 @@
 #   id: 1
 #   nomen: "Lorem ipsum"
 #   procedure_id: 1
+#   procedure_indicator: "Lorem ipsum"
+#   procedure_quantity: 0
+#   procedure_unit: "Lorem ipsum"
 #   target_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
