--- a/test/fixtures/procedure_variables.yml
+++ b/test/fixtures/procedure_variables.yml
@@ -20,19 +20,18 @@
 #
 # == Table: procedure_variables
 #
-#  created_at          :datetime         not null
-#  creator_id          :integer
-#  id                  :integer          not null, primary key
-#  lock_version        :integer          default(0), not null
-#  nomen               :string(255)      not null
-#  procedure_id        :integer          not null
-#  procedure_indicator :string(255)      not null
-#  procedure_quantity  :decimal(19, 4)   not null
-#  procedure_unit      :string(255)      not null
-#  roles               :string(255)
-#  target_id           :integer          not null
-#  updated_at          :datetime         not null
-#  updater_id          :integer
+#  created_at       :datetime         not null
+#  creator_id       :integer
+#  id               :integer          not null, primary key
+#  indicator        :string(255)      not null
+#  lock_version     :integer          default(0), not null
+#  measure_quantity :decimal(19, 4)   not null
+#  measure_unit     :string(255)      not null
+#  procedure_id     :integer          not null
+#  role             :string(255)      not null
+#  target_id        :integer          not null
+#  updated_at       :datetime         not null
+#  updater_id       :integer
 #
 #
 # == Fixture: procedure_variables
@@ -41,11 +40,11 @@
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
-#   nomen: "Lorem ipsum"
+#   indicator: "Lorem ipsum"
+#   measure_quantity: 0
+#   measure_unit: "Lorem ipsum"
 #   procedure_id: 1
-#   procedure_indicator: "Lorem ipsum"
-#   procedure_quantity: 0
-#   procedure_unit: "Lorem ipsum"
+#   role: "Lorem ipsum"
 #   target_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
