--- a/test/fixtures/production_supports.yml
+++ b/test/fixtures/production_supports.yml
@@ -22,9 +22,12 @@
 #
 #  created_at    :datetime         not null
 #  creator_id    :integer
+#  exclusive     :boolean          not null
 #  id            :integer          not null, primary key
 #  lock_version  :integer          default(0), not null
 #  production_id :integer          not null
+#  started_at    :datetime
+#  stopped_at    :datetime
 #  storage_id    :integer          not null
 #  updated_at    :datetime         not null
 #  updater_id    :integer
@@ -35,6 +38,7 @@
 # production_supports_001:
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
+#   exclusive: true
 #   id: 1
 #   production_id: 1
 #   storage_id: 1
