--- a/config/rights.yml
+++ b/config/rights.yml
@@ -77,10 +77,9 @@
 # - "backend/cells/demo_map_cells#show"
 # - "backend/cells/demo_pie_cells#show"
 # - "backend/cells/expense_chart_cells#show"
-# - "backend/cells/last_events_cells#list"
-# - "backend/cells/last_events_cells#show"
 # - "backend/cells/last_milk_result_cells#list"
 # - "backend/cells/last_milk_result_cells#show"
+# - "backend/cells/last_procedures_cells#list"
 # - "backend/cells/last_procedures_cells#show"
 # - "backend/cells/last_products_cells#list"
 # - "backend/cells/last_products_cells#show"
@@ -451,7 +450,7 @@ consult_entities:
 - "backend/entities#list_outgoing_payments"
 - "backend/entities#list_purchases"
 - "backend/entities#list_sales"
-- "backend/entities#list_subscriptions" #?
+- "backend/entities#list_subscriptions"
 - "backend/entities#show"
 
 # Consult the journal entries
@@ -695,7 +694,7 @@ manage_entities:
 - "backend/entities#list_meeting_participations"
 - "backend/entities#list_purchases"
 - "backend/entities#list_sales"
-- "backend/entities#list_subscriptions" #?
+- "backend/entities#list_subscriptions"
 - "backend/entities#new"
 - "backend/entities#picture"
 - "backend/entities#update"
