--- a/test/fixtures/operations.yml
+++ b/test/fixtures/operations.yml
@@ -28,7 +28,7 @@
 #  lock_version    :integer          default(0), not null
 #  position        :integer
 #  started_at      :datetime         not null
-#  stopped_at      :datetime
+#  stopped_at      :datetime         not null
 #  updated_at      :datetime         not null
 #  updater_id      :integer
 #
@@ -41,6 +41,7 @@
 #   id: 1
 #   intervention_id: 1
 #   started_at: 2009-07-19 19:13:59 +02:00
+#   stopped_at: 2009-07-19 19:13:59 +02:00
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
@@ -51,6 +52,7 @@ operations_001:
   id: 1
   intervention_id: 1
   started_at: 2009-07-19 19:13:59 +02:00
+  stopped_at: 2009-07-19 21:13:59 +02:00
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -60,6 +62,7 @@ operations_002:
   id: 2
   intervention_id: 1
   started_at: 2009-07-19 19:13:59 +02:00
+  stopped_at: 2009-07-19 21:13:59 +02:00
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
@@ -69,5 +72,6 @@ operations_003:
   id: 3
   intervention_id: 1
   started_at: 2009-07-19 19:13:59 +02:00
+  stopped_at: 2009-07-19 21:07:11 +02:00
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
