--- a/test/fixtures/prescriptions.yml
+++ b/test/fixtures/prescriptions.yml
@@ -27,7 +27,7 @@
 #  document_id      :integer
 #  id               :integer          not null, primary key
 #  lock_version     :integer          default(0), not null
-#  prescriptor_id   :integer
+#  prescriptor_id   :integer          not null
 #  reference_number :string(255)
 #  updated_at       :datetime         not null
 #  updater_id       :integer
@@ -39,6 +39,7 @@
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
+#   prescriptor_id: 1
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
@@ -46,5 +47,6 @@ prescriptions_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
+  prescriptor_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
