--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -240,11 +240,14 @@ animals_002:
   variant_id: 1
   variety: "bos"
 
+# -----------------------------------------------------------------------------
+# Matters
+
 matters_001:
   category_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  id: 12
+  id: 1001
   name: "Sand"
   nature_id: 1
   number: "0012"
@@ -258,7 +261,7 @@ matters_002:
   category_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  id: 13
+  id: 1002
   name: "Book"
   nature_id: 1
   number: "0013"
@@ -272,7 +275,7 @@ matters_003:
   category_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  id: 14
+  id: 1003
   name: "Iron grid"
   nature_id: 1
   number: "0014"
@@ -286,7 +289,7 @@ matters_004:
   category_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  id: 15
+  id: 1004
   name: "Deuterium"
   nature_id: 1
   number: "0015"
@@ -300,7 +303,7 @@ matters_005:
   category_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  id: 16
+  id: 1005
   name: "Oxygen"
   nature_id: 1
   number: "0016"
@@ -310,11 +313,62 @@ matters_005:
   variant_id: 1
   variety: "matter"
 
+# -----------------------------------------------------------------------------
+# Immatters
+
+immatters_001:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 2001
+  name: "Immatter #1"
+  nature_id: 1
+  number: "2001"
+  type: 'Immatter'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "immatter"
+
+immatters_002:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 2002
+  name: "Immatter #2"
+  nature_id: 1
+  number: "2002"
+  type: 'Immatter'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "immatter"
+
+immatters_003:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 2003
+  name: "Immatter #3"
+  nature_id: 1
+  number: "2003"
+  type: 'Immatter'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "immatter"
+
+# -----------------------------------------------------------------------------
+# ProductGroup
+
 product_groups_001:
   category_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  id: 17
+  id: 3001
   name: "Troupeau 1"
   nature_id: 1
   number: "0017"
@@ -325,11 +379,11 @@ product_groups_001:
   variant_id: 1
   variety: "product_group"
 
-product_groups_001:
+product_groups_002:
   category_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  id: 18
+  id: 3002
   name: "Troupeau 1"
   nature_id: 1
   number: "0018"
@@ -340,11 +394,11 @@ product_groups_001:
   variant_id: 1
   variety: "product_group"
 
-product_groups_001:
+product_groups_003:
   category_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  id: 19
+  id: 3003
   name: "Troupeau 1"
   nature_id: 1
   number: "0019"
@@ -354,3 +408,680 @@ product_groups_001:
   parent_id: 1
   variant_id: 1
   variety: "product_group"
+
+
+# -----------------------------------------------------------------------------
+# BuildingDivisions
+
+building_divisions_001:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 28001
+  name: "BuildingDivision #1"
+  nature_id: 1
+  number: "28001"
+  type: 'BuildingDivision'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "building_division"
+
+building_divisions_002:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 28002
+  name: "BuildingDivision #2"
+  nature_id: 1
+  number: "28002"
+  type: 'BuildingDivision'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "building_division"
+
+building_divisions_003:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 28003
+  name: "BuildingDivision #3"
+  nature_id: 1
+  number: "28003"
+  type: 'BuildingDivision'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "building_division"
+
+
+# -----------------------------------------------------------------------------
+# AnimalGroups
+
+animal_groups_001:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 29001
+  name: "AnimalGroup #1"
+  nature_id: 1
+  number: "29001"
+  type: 'AnimalGroup'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "animal_group"
+
+animal_groups_002:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 29002
+  name: "AnimalGroup #2"
+  nature_id: 1
+  number: "29002"
+  type: 'AnimalGroup'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "animal_group"
+
+animal_groups_003:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 29003
+  name: "AnimalGroup #3"
+  nature_id: 1
+  number: "29003"
+  type: 'AnimalGroup'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "animal_group"
+
+# -----------------------------------------------------------------------------
+# LandParcelGroups
+
+land_parcel_groups_001:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 30001
+  name: "LandParcelGroup #1"
+  nature_id: 1
+  number: "30001"
+  type: 'LandParcelGroup'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "land_parcel_group"
+
+land_parcel_groups_002:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 30002
+  name: "LandParcelGroup #2"
+  nature_id: 1
+  number: "30002"
+  type: 'LandParcelGroup'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "land_parcel_group"
+
+land_parcel_groups_003:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 30003
+  name: "LandParcelGroup #3"
+  nature_id: 1
+  number: "30003"
+  type: 'LandParcelGroup'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "land_parcel_group"
+
+# -----------------------------------------------------------------------------
+# LandParcelClusters
+
+land_parcel_clusters_001:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 31001
+  name: "LandParcelCluster #1"
+  nature_id: 1
+  number: "31001"
+  type: 'LandParcelCluster'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "land_parcel_cluster"
+
+land_parcel_clusters_002:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 31002
+  name: "LandParcelCluster #2"
+  nature_id: 1
+  number: "31002"
+  type: 'LandParcelCluster'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "land_parcel_cluster"
+
+land_parcel_clusters_003:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 31003
+  name: "LandParcelCluster #3"
+  nature_id: 1
+  number: "31003"
+  type: 'LandParcelCluster'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "land_parcel_cluster"
+
+
+# -----------------------------------------------------------------------------
+# CultivableLandParcels
+
+cultivable_land_parcels_001:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 32001
+  name: "CultivableLandParcel #1"
+  nature_id: 1
+  number: "32001"
+  type: 'CultivableLandParcel'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "cultivable_land_parcel"
+
+cultivable_land_parcels_002:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 32002
+  name: "CultivableLandParcel #2"
+  nature_id: 1
+  number: "32002"
+  type: 'CultivableLandParcel'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "cultivable_land_parcel"
+
+cultivable_land_parcels_003:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 32003
+  name: "CultivableLandParcel #3"
+  nature_id: 1
+  number: "32003"
+  type: 'CultivableLandParcel'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "cultivable_land_parcel"
+
+# -----------------------------------------------------------------------------
+# OrganicMatters
+
+organic_matters_001:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 5001
+  name: "OrganicMatter #1"
+  nature_id: 1
+  number: "5001"
+  type: 'OrganicMatter'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "organic_matter"
+
+organic_matters_002:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 5002
+  name: "OrganicMatter #2"
+  nature_id: 1
+  number: "5002"
+  type: 'OrganicMatter'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "organic_matter"
+
+organic_matters_003:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 5003
+  name: "OrganicMatter #3"
+  nature_id: 1
+  number: "5003"
+  type: 'OrganicMatter'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "organic_matter"
+
+# -----------------------------------------------------------------------------
+# MineralMatters
+
+mineral_matters_001:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 6001
+  name: "MineralMatter #1"
+  nature_id: 1
+  number: "6001"
+  type: 'MineralMatter'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "mineral_matter"
+
+mineral_matters_002:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 6002
+  name: "MineralMatter #2"
+  nature_id: 1
+  number: "6002"
+  type: 'MineralMatter'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "mineral_matter"
+
+mineral_matters_003:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 6003
+  name: "MineralMatter #3"
+  nature_id: 1
+  number: "6003"
+  type: 'MineralMatter'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "mineral_matter"
+
+# -----------------------------------------------------------------------------
+# Plants
+
+plants_001:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 10001
+  name: "Plant #1"
+  nature_id: 1
+  number: "10001"
+  type: 'Plant'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "plant"
+
+plants_002:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 10002
+  name: "Plant #2"
+  nature_id: 1
+  number: "10002"
+  type: 'Plant'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "plant"
+
+plants_003:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 10003
+  name: "Plant #3"
+  nature_id: 1
+  number: "10003"
+  type: 'Plant'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "plant"
+
+# -----------------------------------------------------------------------------
+# Medecines
+
+medecines_001:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 11001
+  name: "Medecine #1"
+  nature_id: 1
+  number: "11001"
+  type: 'Medecine'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "medecine"
+
+medecines_002:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 11002
+  name: "Medecine #2"
+  nature_id: 1
+  number: "11002"
+  type: 'Medecine'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "medecine"
+
+medecines_003:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 11003
+  name: "Medecine #3"
+  nature_id: 1
+  number: "11003"
+  type: 'Medecine'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "medecine"
+
+# -----------------------------------------------------------------------------
+# AnimalMedecines
+
+animal_medecines_001:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 12001
+  name: "AnimalMedecine #1"
+  nature_id: 1
+  number: "12001"
+  type: 'AnimalMedecine'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "animal_medecine"
+
+animal_medecines_002:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 12002
+  name: "AnimalMedecine #2"
+  nature_id: 1
+  number: "12002"
+  type: 'AnimalMedecine'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "animal_medecine"
+
+animal_medecines_003:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 12003
+  name: "AnimalMedecine #3"
+  nature_id: 1
+  number: "12003"
+  type: 'AnimalMedecine'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "animal_medecine"
+
+# -----------------------------------------------------------------------------
+# PlantMedecines
+
+plant_medecines_001:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 13001
+  name: "PlantMedecine #1"
+  nature_id: 1
+  number: "13001"
+  type: 'PlantMedecine'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "plant_medecine"
+
+plant_medecines_002:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 13002
+  name: "PlantMedecine #2"
+  nature_id: 1
+  number: "13002"
+  type: 'PlantMedecine'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "plant_medecine"
+
+plant_medecines_003:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 13003
+  name: "PlantMedecine #3"
+  nature_id: 1
+  number: "13003"
+  type: 'PlantMedecine'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "plant_medecine"
+
+# -----------------------------------------------------------------------------
+# Services
+
+services_001:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 19001
+  name: "Service #1"
+  nature_id: 1
+  number: "19001"
+  type: 'Service'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "service"
+
+services_002:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 19002
+  name: "Service #2"
+  nature_id: 1
+  number: "19002"
+  type: 'Service'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "service"
+
+services_003:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 19003
+  name: "Service #3"
+  nature_id: 1
+  number: "19003"
+  type: 'Service'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "service"
+
+# -----------------------------------------------------------------------------
+# Settlements
+
+settlements_001:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 20001
+  name: "Settlement #1"
+  nature_id: 1
+  number: "20001"
+  type: 'Settlement'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "settlement"
+
+settlements_002:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 20002
+  name: "Settlement #2"
+  nature_id: 1
+  number: "20002"
+  type: 'Settlement'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "settlement"
+
+settlements_003:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 20003
+  name: "Settlement #3"
+  nature_id: 1
+  number: "20003"
+  type: 'Settlement'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "settlement"
+
+
+# -----------------------------------------------------------------------------
+# Workers
+
+workers_001:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 21001
+  name: "Alice"
+  nature_id: 1
+  number: "21001"
+  type: 'Worker'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "worker"
+
+workers_002:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 21002
+  name: "Bob"
+  nature_id: 1
+  number: "21002"
+  type: 'Worker'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "worker"
+
+workers_003:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 21003
+  name: "Charlene"
+  nature_id: 1
+  number: "21003"
+  type: 'Worker'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  parent_id: 1
+  variant_id: 1
+  variety: "worker"
+
