--- a/test/fixtures/professions.yml
+++ b/test/fixtures/professions.yml
@@ -42,11 +42,21 @@
 #   updated_at: 2009-07-19 19:13:59 +02:00
 #   updater_id: 1
 #
+
 professions_001:
   commercial: true
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
   name: "Lorem ipsum"
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+professions_002:
+  commercial: true
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 2
+  name: "Lorem ipsum 2"
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
