--- a/test/fixtures/product_nature_variants.yml
+++ b/test/fixtures/product_nature_variants.yml
@@ -112,6 +112,22 @@ product_nature_variants_004:
   updater_id: 1
   variety: "building"
 
+product_nature_variants_007:
+  active: true
+  category_id: 1
+  commercial_name: "Cow"
+  created_at: "2009-07-19 19:13:59 +02:00"
+  creator_id: 1
+  horizontal_rotation: 0
+  unit_name: "head"
+  id: 7
+  nature_id: 1
+  nature_name: "Cow"
+  number: "PNV007"
+  updated_at: "2009-07-19 19:13:59 +02:00"
+  updater_id: 1
+  variety: "bos"
+
 product_nature_variants_029:
   active: true
   category_id: 1
