--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -223,6 +223,21 @@ animals_003:
   variant_id: 1
   variety: "gallus"
 
+animals_004:
+  category_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 7004
+  identification_number: "A7001"
+  name: "MARGUERITE"
+  nature_id: 1
+  number: "7004"
+  type: 'Animal'
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  variant_id: 7
+  variety: "bos"
+
 # -----------------------------------------------------------------------------
 # {28} BuildingDivisions
 
