--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_install:
  - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
  - ./test/ci/before_install.sh
 before_script: ./test/ci/before_script.sh
-script: "DISPLAY=:99.0 bundle exec rake test"
+script: "export DISPLAY=:99.0 && bundle exec rake test"
